--- a/frontend/projects/iot-registry-frontend/src/styles.scss
+++ b/frontend/projects/iot-registry-frontend/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+$defaultFont: 'Arial', 'Helvetica', 'sans-serif';
+
+* {
+    margin: 0;
+}
+body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+    font-family: $defaultFont;
+}
