--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -1,1 +1,22 @@
-<p>devices-table works!</p>
+<table>
+    <thead>
+            <tr>
+                <th>Serial number</th>
+                <th>Model</th>
+                <th>Manufacturer</th>
+                <th>Type</th>
+                <th>Status</th>
+                <th>Location</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let device of devices" [ngClass]="getStatusClass(device.status)">
+                <td>{{device.serialNumber}}</td>
+                <td>{{device.model}}</td>
+                <td>{{device.manufacturer}}</td>
+                <td>{{device.type}}</td>
+                <td>{{device.status}}</td>
+                <td>{{device.location}}</td>
+            </tr>
+        </tbody>
+</table>
