Changed location from devices table from location id to address.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -16,7 +16,7 @@
                 <td>{{device.manufacturer}}</td>
                 <td>{{device.type}}</td>
                 <td>{{device.status}}</td>
-                <td>{{device.location}}</td>
+                <td>{{device.locationName}}</td>
             </tr>
         </tbody>
 </table>
