--- a/frontend/projects/iot-registry-frontend/src/app/app.html
+++ b/frontend/projects/iot-registry-frontend/src/app/app.html
@@ -6,7 +6,7 @@
         <a class="nav-link">Devices</a>
         <a class="nav-link">Locations</a>
         <a class="nav-link">Statistics</a>
-        <a class="nav-link">Log in</a>
+        <a class="nav-link" (click)="onLoginClick()">Log in</a>
     </div>
 </nav>
 
