--- a/frontend/projects/iot-registry-frontend/src/app/login/login.html
+++ b/frontend/projects/iot-registry-frontend/src/app/login/login.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<div class="login-container">
+      <h2>Login</h2>
+      <form (ngSubmit)="login()">
+        <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required />
+        <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+    </div>
