Implemented username change on nav bar for logged in user.

--- a/frontend/projects/iot-registry-frontend/src/app/app.html
+++ b/frontend/projects/iot-registry-frontend/src/app/app.html
@@ -1,6 +1,6 @@
 <nav>
     <div>
-        <a>Guest</a>
+        <a>{{ userManager.username() }}</a>
     </div>
     <div>
         <a class="nav-link">Devices</a>
