--- a/frontend/projects/iot-registry-frontend/src/app/app.html
+++ b/frontend/projects/iot-registry-frontend/src/app/app.html
@@ -3,9 +3,9 @@
         <a>{{ userManager.username() }}</a>
     </div>
     <div>
-        <a class="nav-link">Devices</a>
-        <a class="nav-link">Locations</a>
-        <a class="nav-link">Statistics</a>
+        <a class="nav-link" routerLink="/devicestable">Devices</a>
+        <a *ngIf="userManager.isLoggedIn()" class="nav-link">Locations</a>
+        <a *ngIf="userManager.isLoggedIn()" class="nav-link">Statistics</a>
         <a class="nav-link" (click)="onLoginClick()">{{ userManager.isLoggedIn() ? 'Logout' : 'Log in' }}</a>
     </div>
 </nav>
