--- a/frontend/projects/iot-registry-frontend/src/app/login/login.html
+++ b/frontend/projects/iot-registry-frontend/src/app/login/login.html
@@ -1,7 +1,10 @@
 <div class="login-container">
-      <h2>Login</h2>
+      <h1>Login</h1>
+      <div id="message"></div>
       <form (ngSubmit)="login()">
+        <label for="username">Username:</label>
         <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required />
+        <label for="password">Password:</label>
         <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required />
         <button type="submit">Login</button>
       </form>
