--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -1,3 +1,5 @@
+<div class="table-container">
+    <button>Register device</button>
 <table>
     <thead>
             <tr>
@@ -20,3 +22,4 @@
             </tr>
         </tbody>
 </table>
+</div>
