Implemented button showing only to logged in users.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -1,5 +1,5 @@
 <div class="table-container">
-    <button>Register device</button>
+    <button *ngIf="userManager.isLoggedIn()">Register device</button>
 <table>
     <thead>
             <tr>
