--- a/frontend/projects/iot-registry-frontend/src/app/add-device/add-device.html
+++ b/frontend/projects/iot-registry-frontend/src/app/add-device/add-device.html
@@ -1,1 +1,53 @@
-<p>add-device works!</p>
+<div class="add-device-container">
+    <h1>Register new IoT device</h1>
+    <div id="message" *ngIf="message">{{ message }}</div>
+    <form>
+        <div class="row">
+            <div class="field">
+                <label for="serialNumber">Serial number: *</label>
+                <input type="text" [(ngModel)]="serialNumber" name="serialNumber" placeholder="fw34hye5yjh54hhy"
+                    required />
+            </div>
+            <div class="field">
+                <label for="model">Model: *</label>
+                <input type="text" [(ngModel)]="model" name="model" placeholder="NeoSensonX" required />
+            </div>
+            <div class="field">
+                <label for="manufacturer">Manufacturer: *</label>
+                <input type="text" [(ngModel)]="manufacturer" name="manufacturer" placeholder="Neo Devices d.o.o."
+                    required />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="field">
+                <label for="type">Type: *</label>
+                <select [(ngModel)]="type" name="type" required>
+                    <option *ngFor="let t of types" [value]="t">{{ t }}</option>
+                </select>
+            </div>
+            <div class="field">
+                <label for="status">Status: *</label>
+                <select [(ngModel)]="status" name="status" required>
+                    <option *ngFor="let s of statuses" [value]="s">{{ s }}</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="field">
+                <label for="firmware">Firmware version: *</label>
+                <input type="text" [(ngModel)]="firmware" name="firmware" placeholder="1.0.0" required />
+            </div>
+            <div class="field">
+                <label for="location">Location:</label>
+                <select [(ngModel)]="location" name="location">
+                    <option *ngFor="let l of locations" [value]="l">{{ l }}</option>
+                </select>
+            </div>
+        </div>
+
+        <button type="submit">Register</button>
+    </form>
+
+</div>
