--- a/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.html
@@ -1,19 +1,21 @@
 <table>
     <thead>
-            <tr>
-                <th>Address</th>
-                <th>Description</th>
-                <th>Latitude</th>
-                <th>Longitude</th>
+        <tr>
+            <th>Address</th>
+            <th>Description</th>
+            <th>Latitude</th>
+            <th>Longitude</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let location of locations">
-                <td>{{location.address}}</td>
-                <td>{{location.description}}</td>
-                <td>{{location.latitude}}</td>
-                <td>{{location.longitude}}</td>
-            </tr>
-        </tbody>
+        </tr>
+    </thead>
+    <tbody>
+        @for (location of locations; track location) {
+        <tr>
+            <td>{{location.address}}</td>
+            <td>{{location.description}}</td>
+            <td>{{location.latitude}}</td>
+            <td>{{location.longitude}}</td>
+        </tr>
+        }
+    </tbody>
 </table>
