Replaced deprecated syntax.

--- a/frontend/projects/iot-registry-frontend/src/app/add-device/add-device.html
+++ b/frontend/projects/iot-registry-frontend/src/app/add-device/add-device.html
@@ -1,6 +1,8 @@
 <div class="add-device-container">
     <h1>Register new IoT device</h1>
-    <div id="message" *ngIf="message">{{ message }}</div>
+    @if(message){
+    <div id="message">{{ message }}</div>
+    }
     <form (ngSubmit)="registerDevice()">
         <div class="row">
             <div class="field">
