--- a/frontend/projects/iot-registry-frontend/src/app/app.html
+++ b/frontend/projects/iot-registry-frontend/src/app/app.html
@@ -4,8 +4,10 @@
     </div>
     <div>
         <a class="nav-link" routerLink="/devicestable">Devices</a>
-        <a *ngIf="userManager.isLoggedIn()" class="nav-link" routerLink="/locations">Locations</a>
-        <a *ngIf="userManager.isLoggedIn()" class="nav-link">Statistics</a>
+        @if(userManager.isLoggedIn()){
+        <a class="nav-link" routerLink="/locations">Locations</a>
+        <a class="nav-link">Statistics</a>
+        }
         <a class="nav-link" (click)="onLoginClick()">{{ userManager.isLoggedIn() ? 'Logout' : 'Log in' }}</a>
     </div>
 </nav>
