--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -1,5 +1,7 @@
 <div class="table-container">
-    <button *ngIf="userManager.isLoggedIn()" (click)="onRegisterDeviceClick()">Register device</button>
+    @if(userManager.isLoggedIn()){
+    <button (click)="onRegisterDeviceClick()">Register device</button>
+    }
     <table>
         <thead>
             <tr>
