--- a/frontend/projects/iot-registry-frontend/src/app/login/login.html
+++ b/frontend/projects/iot-registry-frontend/src/app/login/login.html
@@ -1,6 +1,8 @@
 <div class="login-container">
   <h1>Login</h1>
-  <div id="message" *ngIf="message">{{ message }}</div>
+  @if (message) {
+  <div id="message">{{ message }}</div>
+  }
   <form (ngSubmit)="login()">
     <label for="username">Username:</label>
     <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required />
