Implemented routing to device events component on serial number click.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.html
@@ -16,7 +16,11 @@
         <tbody>
             @for (device of devices; track device) {
             <tr [ngClass]="getStatusClass(device.status)">
-                <td>{{device.serialNumber}}</td>
+                <td>
+                    <a [routerLink]="['/devices', device.serialNumber, 'events']">
+                        {{ device.serialNumber }}
+                    </a>
+                </td>
                 <td>{{device.model}}</td>
                 <td>{{device.manufacturer}}</td>
                 <td>{{device.type}}</td>
