--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.scss
@@ -56,7 +56,7 @@ table {
 }
 
 .table-container {
-    margin: 50px; // same margin as your table
+    margin: 50px;
     margin-bottom: 120px;
 
     display: flex;
