--- a/frontend/projects/iot-registry-frontend/src/app/device-events/device-events.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/device-events/device-events.scss
@@ -1,6 +1,11 @@
 $blue-background: #b8d9ff;
 $blue-text: #0b68d4;
 
+h1{
+    margin-top: 20px;
+    margin-left: 100px;
+}
+
 table {
     width: calc(100% - 100px);
     border-collapse: collapse;
