Formatted date that is shown as a timestamp.

--- a/frontend/projects/iot-registry-frontend/src/app/device-events/device-events.html
+++ b/frontend/projects/iot-registry-frontend/src/app/device-events/device-events.html
@@ -13,7 +13,7 @@
             <tr>
                 <td>{{event.type}}</td>
                 <td>{{event.data}}</td>
-                <td>{{event.timestamp}}</td>
+                <td>{{event.timestamp | date:'yyyy-MM-dd HH:mm:ss'}}</td>
             </tr>
             }
         </tbody>
