Added device info panel and buttons for routing to and from the map component.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
@@ -1,1 +1,7 @@
-<div id="map"></div>
+<div id="map-container">
+    <div id="map"></div>
+    <div id="info-column">
+        <button routerLink="/devicestable">Devices table</button>
+        <div id="info">Device info...</div>
+    </div>
+</div>
