--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
@@ -1,4 +1,42 @@
 #map {
-  width: 70%;
-  height: calc(100vh - 80px);
+    width: 70%;
+    height: calc(100vh - 80px);
+}
+
+#map-container {
+    display: flex;
+    flex-direction: row;
+
+    #info-column {
+        display: flex;
+        flex-direction: column;
+        border-left: 5px;
+        border-top: 0px;
+        border-bottom: 0px;
+        border-right: 0px;
+        border-style: solid;
+        width: 30%;
+
+        button {
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 10px;
+            border: 0;
+            background-color: #0b68d4;
+            font-size: 20px;
+            text-decoration: none;
+            color: white;
+            display: flex;
+            align-self: center;
+            margin-top: 20px;
+
+            &:hover {
+                background-color: #4870b0a0;
+            }
+        }
+
+        #info {
+            margin-top: 30px;
+        }
+    }
 }
