--- a/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-table/devices-table.scss
@@ -62,21 +62,46 @@ table {
     display: flex;
     flex-direction: column;
 
-    button {
-        padding: 10px;
-        cursor: pointer;
-        border-radius: 10px;
-        border: 0;
-        background-color: #0b68d4;
-        font-size: 20px;
-        text-decoration: none;
-        color: white;
+    #buttons {
         display: flex;
-        align-self: flex-end;
-        margin-right: 50px;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
 
-        &:hover {
-            background-color: #4870b0a0;
+        #devicesMapButton {
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 10px;
+            border: 0;
+            background-color: #0b68d4;
+            font-size: 20px;
+            text-decoration: none;
+            color: white;
+            display: flex;
+            align-self: flex-start;
+            margin-left: 50px;
+
+            &:hover {
+                background-color: #4870b0a0;
+            }
+        }
+
+        #registerDeviceButton {
+            padding: 10px;
+            cursor: pointer;
+            border-radius: 10px;
+            border: 0;
+            background-color: #0b68d4;
+            font-size: 20px;
+            text-decoration: none;
+            color: white;
+            display: flex;
+            align-self: flex-end;
+            margin-right: 50px;
+
+            &:hover {
+                background-color: #4870b0a0;
+            }
         }
     }
 }
