Styled info container.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
@@ -2,6 +2,6 @@
     <div id="map"></div>
     <div id="info-column">
         <button routerLink="/devicestable">Devices table</button>
-        <div id="info">Device info...</div>
+        <div id="info"></div>
     </div>
 </div>
