--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
@@ -36,7 +36,16 @@
         }
 
         #info {
-            margin-top: 30px;
+            margin-left: 10px;
+            margin-right: 10px;
+            padding: 10px;
+            border-top: 1px;
+            border-left: 0px;
+            border-bottom: 0px;
+            border-right: 0px;
+            border-style: solid;
+            border-color: rgba(128, 128, 128, 0.493);
+            margin-top: 20px;
         }
     }
 }
