--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.scss
@@ -36,6 +36,7 @@
         }
 
         #info {
+            justify-items: center;
             margin-left: 10px;
             margin-right: 10px;
             padding: 10px;
