Added showing of device status and type.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
@@ -12,6 +12,8 @@
                 @for (device of devicesAtLocation; track device.serialNumber) {
                 <li>
                     <div>Serial: {{device.serialNumber}}</div>
+                    <div>Type: {{device.type}}</div>
+                    <div>Status: {{device.status}}</div>
                     <div>Model: {{device.model}}</div>
                     <div>Manufacturer: {{device.manufacturer}}</div>
                 </li>
