Added styling to device list on device map. Fixed no gray class css on devices table.

--- a/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
+++ b/frontend/projects/iot-registry-frontend/src/app/devices-map/devices-map.html
@@ -10,7 +10,7 @@
             @if(devicesAtLocation.length > 0) {
             <ul>
                 @for (device of devicesAtLocation; track device.serialNumber) {
-                <li>
+                <li [ngClass]="getStatusClass(device.status)">
                     <div>Serial: {{device.serialNumber}}</div>
                     <div>Type: {{device.type}}</div>
                     <div>Status: {{device.status}}</div>
