--- a/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.scss
@@ -2,9 +2,11 @@ $blue-background: #b8d9ff;
 $blue-text: #0b68d4;
 
 table {
-    width: calc(100% - 100px);;
+    width: calc(100% - 100px);
     border-collapse: collapse;
-    margin: 50px;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
     margin-bottom: 120px;
     border-radius: 10px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -25,5 +27,31 @@ table {
 
     tr:last-child td {
         border-bottom: none;
+    }
+}
+
+.table-container {
+    margin: 50px;
+    margin-bottom: 120px;
+
+    display: flex;
+    flex-direction: column;
+
+    #addLocationButton {
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 10px;
+        border: 0;
+        background-color: #0b68d4;
+        font-size: 20px;
+        text-decoration: none;
+        color: white;
+        display: flex;
+        align-self: flex-end;
+        margin-right: 50px;
+
+        &:hover {
+            background-color: #4870b0a0;
+        }
     }
 }
