--- a/frontend/projects/iot-registry-frontend/src/app/add-location/add-location.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/add-location/add-location.scss
@@ -10,12 +10,13 @@
     form {
         margin-top: 50px;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         gap: 35px;
         align-items: flex-start;
 
-        .row {
+        .column {
             display: flex;
+            flex-direction: column;
             gap: 20px;
             width: 100%;
         }
@@ -65,6 +66,11 @@
         box-shadow: 2px 2px 4px #000000;
         align-self: flex-start;
         margin-top: 30px;
-        margin-left: 20px;
+        //margin-left: 20px;
     }
+}
+
+#map {
+    width: 400px;
+    height: 300px;
 }
