--- a/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.html
+++ b/frontend/projects/iot-registry-frontend/src/app/locations-table/locations-table.html
@@ -15,7 +15,11 @@
         <tbody>
             @for (location of locations; track location) {
             <tr>
-                <td>{{location.address}}</td>
+                <td>
+                    <a [routerLink]="['/locations', location.id]">
+                        {{location.address}}
+                    </a>
+                </td>
                 <td>{{location.description}}</td>
                 <td>{{location.latitude}}</td>
                 <td>{{location.longitude}}</td>
