Added call of location edit endpoint.

--- a/frontend/projects/iot-registry-frontend/src/app/edit-location/edit-location.html
+++ b/frontend/projects/iot-registry-frontend/src/app/edit-location/edit-location.html
@@ -23,7 +23,7 @@
                 <input type="text" [(ngModel)]="latitude" name="latitude" placeholder="16.4326" readonly required />
             </div>
             <div class="field">
-                <button type="submit">Add</button>
+                <button type="submit">Edit</button>
             </div>
         </div>
 
