Added basic layout for statistic page device statuses.

--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
@@ -1,1 +1,32 @@
-<p>statistic works!</p>
+<div class="deviceStatusRow">
+    <div class="deviceStatusColumn">
+        <h2>Active</h2>
+        <div class="active">
+            fdasfsdadfsa
+        </div>
+    </div>
+    <div class="deviceStatusColumn">
+        <h2>Idle</h2>
+        <div class="idle">
+            fdsa
+        </div>
+    </div>
+    <div class="deviceStatusColumn">
+        <h2>Deactivated</h2>
+        <div class="deactivated">
+            fdas
+        </div>
+    </div>
+    <div class="deviceStatusColumn">
+        <h2>Error</h2>
+        <div class="error">
+            fasd
+        </div>
+    </div>
+    <div class="deviceStatusColumn">
+        <h2>Total</h2>
+        <div class="total">
+            fdas
+        </div>
+    </div>
+</div>
