--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
@@ -2,31 +2,31 @@
     <div class="deviceStatusColumn">
         <h2>Active</h2>
         <div class="active">
-            fdasfsdadfsa
+            {{active}}
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Idle</h2>
         <div class="idle">
-            fdsa
+            {{idle}}
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Deactivated</h2>
         <div class="deactivated">
-            fdas
+            {{deactivated}}
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Error</h2>
         <div class="error">
-            fasd
+            {{error}}
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Total</h2>
         <div class="total">
-            fdas
+            {{total}}
         </div>
     </div>
 </div>
