Added fetching and showing of status statistic.

--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
@@ -2,25 +2,25 @@
     <div class="deviceStatusColumn">
         <h2>Active</h2>
         <div class="active">
-            {{active}}
+            {{active}} / {{activePercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Idle</h2>
         <div class="idle">
-            {{idle}}
+            {{idle}} / {{idlePercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Deactivated</h2>
         <div class="deactivated">
-            {{deactivated}}
+            {{deactivated}} / {{deactivatedPercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
         <h2>Error</h2>
         <div class="error">
-            {{error}}
+            {{error}} / {{errorPercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
