--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
@@ -1,30 +1,30 @@
 <div class="deviceStatusRow">
     <div class="deviceStatusColumn">
-        <h2>Active</h2>
+        <h2>Active devices</h2>
         <div class="active">
             {{active}} / {{activePercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
-        <h2>Idle</h2>
+        <h2>Idle devices</h2>
         <div class="idle">
             {{idle}} / {{idlePercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
-        <h2>Deactivated</h2>
+        <h2>Deactivated devices</h2>
         <div class="deactivated">
             {{deactivated}} / {{deactivatedPercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
-        <h2>Error</h2>
+        <h2>Devices with error</h2>
         <div class="error">
             {{error}} / {{errorPercent}}%
         </div>
     </div>
     <div class="deviceStatusColumn">
-        <h2>Total</h2>
+        <h2>Total devices</h2>
         <div class="total">
             {{total}}
         </div>
