--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.scss
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.scss
@@ -5,6 +5,7 @@ $red-background: #ffe6e5;
 $blue-background: #b8d9ff;
 
 .deviceStatusRow {
+    margin-left: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -48,5 +49,35 @@ $blue-background: #b8d9ff;
         .total {
             background-color: $blue-background;
         }
+    }
+}
+
+.field {
+    font-weight: bold;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+
+    ::ng-deep .mat-mdc-form-field .mat-mdc-text-field-wrapper {
+        background-color: #0044ff1e;
+        border-radius: 6px;
+        width: 400px;
+    }
+
+    ::ng-deep .mat-mdc-autocomplete-panel {
+        background-color: #0044ff1e;
+        border-radius: 6px;
+    }
+
+    ::ng-deep .mat-mdc-autocomplete-panel .mat-mdc-option {
+        padding: 10px;
+        font-weight: 500;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
+    ::ng-deep .mat-mdc-autocomplete-panel .mat-mdc-option:hover {
+        background-color: rgba(0, 68, 255, 0.1);
     }
 }
