--- a/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
+++ b/frontend/projects/iot-registry-frontend/src/app/statistic/statistic.html
@@ -46,3 +46,25 @@
         </mat-autocomplete>
     </mat-form-field>
 </div>
+
+<!-- Temperature Stats -->
+<div *ngIf="showTemperature">
+  <h3>Temperature Statistics</h3>
+  <p>Max: {{ temperatureData?.max }}</p>
+  <p>Min: {{ temperatureData?.min }}</p>
+  <p>Avg: {{ temperatureData?.avg }}</p>
+</div>
+
+<!-- Humidity Stats -->
+<div *ngIf="showHumidity">
+  <h3>Humidity Statistics</h3>
+  <p>Max: {{ humidityData?.max }}</p>
+  <p>Min: {{ humidityData?.min }}</p>
+  <p>Avg: {{ humidityData?.avg }}</p>
+</div>
+
+<!-- SmartBin Stats -->
+<div *ngIf="showSmartBin">
+  <h3>Smart Bin Statistics</h3>
+  <p>Capacity: {{ smartBinData?.percentageFull }}%</p>
+</div>
