Configured env for simulation endpoint and created empty component.

--- a/frontend/projects/iot-registry-frontend/src/app/app.html
+++ b/frontend/projects/iot-registry-frontend/src/app/app.html
@@ -7,6 +7,7 @@
         @if(userManager.isLoggedIn()){
         <a class="nav-link" routerLink="/locations">Locations</a>
         <a class="nav-link" routerLink="/statistic">Statistics</a>
+        <a class="nav-link" routerLink="/simulation">Simulation</a>
         }
         <a class="nav-link" (click)="onLoginClick()">{{ userManager.isLoggedIn() ? 'Logout' : 'Log in' }}</a>
     </div>
